--- a/.github/workflows/templates/deploy-template.yaml
+++ b/.github/workflows/templates/deploy-template.yaml
@@ -8,9 +8,6 @@ name: Deployment - Template
       SHA:
         required: true
         type: string
-      DEPLOY_ID:
-        required: true
-        type: string
     secrets:
       CLOUD_URL:
         required: true
@@ -51,14 +48,19 @@ jobs:
     env:
       ENVIRONMENT: '${{ inputs.ENVIRONMENT }}'
     outputs:
-      deployment_id: '${{ inputs.DEPLOY_ID }}'
-      environment_url: '${{ secrets.CLOUD_URL }}'
+      deployment_id: '${{ steps.deployment.outputs.deployment_id }}'
+      environment_url: '${{ steps.deployment.outputs.environment_url }}'
     steps:
+      - name: Create GitHub deployment
+        uses: bloodf/github-deploy-action@v1
+        with:
+          environment: '${{ env.ENVIRONMENT }}'
+          environment-url: '${{ secrets.CLOUD_URL }}'
       - name: In-progress Status
         uses: bloodf/github-deploy-status@v1
         with:
-          environment-url: '${{ inputs.DEPLOY_ID }}'
-          deployment-id: '${{ secrets.CLOUD_URL }}'
+          environment-url: '${{ steps.deployment.outputs.deployment_id }}'
+          deployment-id: '${{ steps.deployment.outputs.environment_url }}'
           state: in_progress
   build:
     name: Docker Image Building
