refactor: using relative folder

--- a/.github/workflows/5.deploy-deploy.yaml
+++ b/.github/workflows/5.deploy-deploy.yaml
@@ -14,7 +14,7 @@ concurrency:
 jobs:
   deploy:
     if: github.ref == 'refs/heads/main'
-    uses: .github/workflows/base-deploy.yaml
+    uses: ./.github/workflows/base-deploy.yaml
     with:
       ENVIRONMENT: 'production'
       SHA: '${{ github.sha }}'
