--- a/.github/workflows/6.deploy-staging.yaml
+++ b/.github/workflows/6.deploy-staging.yaml
@@ -14,7 +14,7 @@ concurrency:
 jobs:
   deploy:
     if: github.ref == 'refs/heads/staging'
-    uses: .github/workflows/base-deploy.yaml
+    uses: ./.github/workflows/base-deploy.yaml
     with:
       ENVIRONMENT: 'staging'
       SHA: '${{ github.sha }}'
