--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@intlify/nuxt3": "^0.2.3",
     "@nuxt/content": "^2.0.1",
-    "@nuxt/test-utils": "^3.0.0-rc.6",
+    "@nuxt/test-utils": "3.0.0-rc.4",
     "@nuxtjs/partytown": "^1.2.1",
     "@nuxtjs/tailwindcss": "^5.3.1",
     "@tailwindcss/aspect-ratio": "^0.4.0",
