--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@supabase/supabase-js": "^1.35.6",
     "@vueuse/nuxt": "^9.0.2",
     "clipboard": "^2.0.11",
+    "joi": "^17.6.0",
     "nuxt": "^3.0.0-rc.8",
     "ohmyfetch": "^0.4.18",
     "pinia": "^2.0.17",
