--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nuxtjs/algolia": "^1.1.0",
     "@pinia/nuxt": "^0.3.1",
     "@popperjs/core": "^2.11.5",
+    "@sendgrid/mail": "^7.7.0",
     "@supabase/supabase-js": "^1.35.6",
     "@vueuse/nuxt": "^9.0.2",
     "clipboard": "^2.0.11",
