--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@supabase/supabase-js": "^1.35.6",
     "@vueuse/nuxt": "^9.0.2",
     "clipboard": "^2.0.11",
+    "ejs": "^3.1.8",
     "joi": "^17.6.0",
     "nuxt": "^3.0.0-rc.8",
     "ohmyfetch": "^0.4.18",
@@ -64,6 +65,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
+    "@types/ejs": "^3.1.1",
     "@types/prettier": "^2.6.4",
     "@unlighthouse/nuxt": "^0.3.29",
     "@vitest/ui": "^0.20.3",
