--- a/package.json
+++ b/package.json
@@ -22,67 +22,62 @@
     "precommit": "lint-staged",
     "prepare": "node ./scripts/prepare.js",
     "prepublishOnly": "npm run build",
-    "release": "npx git-ensure -a && npx bumpp --commit --tag --push",
     "start": "node .output/server/index.mjs",
     "story:build": "histoire build",
     "story:dev": "histoire dev",
     "story:preview": "histoire preview",
     "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage",
-    "test:unit": "vitest"
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.6.7",
+    "@headlessui/vue": "^1.7.0",
     "@iconify/vue": "^3.2.1",
-    "@nuxtjs/algolia": "^1.1.0",
-    "@pinia/nuxt": "^0.3.1",
-    "@popperjs/core": "^2.11.5",
-    "@vueuse/nuxt": "^9.0.2",
+    "@nuxtjs/algolia": "^1.1.1",
+    "@pinia/nuxt": "^0.4.2",
+    "@popperjs/core": "^2.11.6",
+    "@vueuse/nuxt": "^9.2.0",
     "clipboard": "^2.0.11",
-    "nuxt": "^3.0.0-rc.4",
+    "nuxt": "^3.0.0-rc.9",
     "ohmyfetch": "^0.4.18",
-    "pinia": "^2.0.17",
+    "pinia": "^2.0.22",
     "regexparam": "^2.0.1",
     "transform-object-keys": "^1.0.7",
     "ufo": "^0.8.5",
-    "vue-github-button": "^3.0.3",
-    "vue-i18n": "^9.2.0"
+    "vue-github-button": "^3.1.0",
+    "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
-    "@histoire/plugin-nuxt": "^0.9.0",
+    "@histoire/plugin-nuxt": "^0.10.7",
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
-    "@intlify/nuxt3": "^0.2.3",
-    "@nuxt/content": "^2.0.1",
-    "@nuxt/test-utils": "3.0.0-rc.4",
-    "@nuxtjs/partytown": "^1.2.1",
-    "@nuxtjs/tailwindcss": "^5.3.1",
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/line-clamp": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.4",
-    "@types/prettier": "^2.6.4",
-    "@unlighthouse/nuxt": "^0.3.29",
-    "@vitest/ui": "^0.20.3",
+    "@intlify/nuxt3": "^0.2.4",
+    "@nuxt/content": "^2.1.0",
+    "@nuxt/test-utils": "3.0.0-rc.9",
+    "@nuxtjs/partytown": "^1.2.2",
+    "@nuxtjs/tailwindcss": "^5.3.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.7",
+    "@types/prettier": "^2.7.0",
+    "@unlighthouse/nuxt": "^0.3.30",
     "@vue-storefront/eslint-config": "^1.0.17",
-    "@vue-storefront/nuxt-gtag": "^1.0.4",
+    "@vue-storefront/nuxt-gtag": "1.0.6",
     "@vue/test-utils": "^2.0.2",
     "c8": "^7.12.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.21.0",
-    "histoire": "^0.9.0",
+    "eslint": "^8.23.0",
+    "histoire": "^0.10.7",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "nuxt-schema-org": "^0.6.5",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "sass": "^1.54.0",
     "sass-loader": "^13.0.2",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss": "^3.1.7",
-    "typescript": "^4.7.4",
-    "vitest": "^0.20.3"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.2",
+    "vitest": "^0.23.1"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix"
