--- a/.github/workflows/4.test.yml
+++ b/.github/workflows/4.test.yml
@@ -18,11 +18,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          cache: npm
+          cache: yarn
       - name: Install Modules
-        run: npm ci
+        run: yarn install --frozen-lockfile
       - name: Run ESLint
-        run: npm run lint
+        run: yarn lint
   test:
     runs-on: ubuntu-latest
     steps:
@@ -31,8 +31,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          cache: npm
+          cache: yarn
       - name: Install Modules
-        run: npm ci
+        run: yarn install --frozen-lockfile
       - name: Run Vitest
-        run: npm run test
+        run: yarn test
