--- a/package.json
+++ b/package.json
@@ -52,28 +52,24 @@
     "@intlify/nuxt3": "^0.2.4",
     "@nuxt/content": "^2.1.0",
     "@nuxt/test-utils": "3.0.0-rc.9",
-    "@nuxtjs/partytown": "^1.2.2",
     "@nuxtjs/tailwindcss": "^5.3.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
     "@types/prettier": "^2.7.0",
-    "@unlighthouse/nuxt": "^0.3.30",
     "@vue-storefront/eslint-config": "^1.0.17",
     "@vue-storefront/nuxt-gtag": "1.0.6",
-    "@vue/test-utils": "^2.0.2",
-    "c8": "^7.12.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.23.0",
     "histoire": "^0.10.7",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "nuxt": "^3.0.0-rc.9",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "sass": "^1.54.0",
-    "sass-loader": "^13.0.2",
+    "sass": "^1.54.9",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.2",
