--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.0",
-    "@iconify/vue": "^3.2.1",
+    "@iconify/vue": "^4.0.0",
     "@nuxtjs/algolia": "^1.1.1",
     "@pinia/nuxt": "^0.4.2",
     "@popperjs/core": "^2.11.6",
@@ -52,27 +52,28 @@
     "@intlify/nuxt3": "^0.2.4",
     "@nuxt/content": "^2.1.0",
     "@nuxt/test-utils": "3.0.0-rc.9",
-    "@nuxtjs/tailwindcss": "^5.3.2",
+    "@nuxtjs/tailwindcss": "^5.3.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
     "@types/prettier": "^2.7.0",
-    "@vue-storefront/eslint-config": "^1.0.17",
+    "@vue-storefront/eslint-config": "^1.1.1",
     "@vue-storefront/nuxt-gtag": "1.0.6",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.23.0",
+    "eslint": "8.22.0",
     "histoire": "^0.10.7",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "nuxt": "^3.0.0-rc.9",
+    "nuxt-icon": "^0.1.5",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "sass": "^1.54.9",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.2",
+    "typescript": "^4.8.3",
     "vitest": "^0.23.1"
   },
   "lint-staged": {
