--- a/.github/workflows/6.deploy-staging.yaml
+++ b/.github/workflows/6.deploy-staging.yaml
@@ -32,3 +32,9 @@ jobs:
       SLACK_ICON: '${{secrets.SLACK_ICON}}'
       SLACK_USERNAME: '${{secrets.SLACK_USERNAME}}'
       SLACK_WEBHOOK: '${{secrets.SLACK_WEBHOOK}}'
+      SUPABASE_URL: '${{secrets.SUPABASE_URL}}'
+      SUPABASE_PUBLIC_KEY: '${{secrets.SUPABASE_PUBLIC_KEY}}'
+      SUPABASE_SERVICE_ROLE_KEY: '${{secrets.SUPABASE_SERVICE_ROLE_KEY}}'
+      DISCORD_TOKEN: '${{secrets.DISCORD_TOKEN}}'
+      DISCORD_GUILD_ID: '${{secrets.DISCORD_GUILD_ID}}'
+      SENDGRID_API_KEY: '${{secrets.SENDGRID_API_KEY}}'
