--- a/.vuestorefrontcloud/docker/Dockerfile
+++ b/.vuestorefrontcloud/docker/Dockerfile
@@ -5,12 +5,24 @@ ARG ALGOLIA_ID
 ARG GITHUB_API_TOKEN
 ARG DEVTO_API_TOKEN
 ARG GOOGLE_TAG_ID
+ARG SUPABASE_URL
+ARG SUPABASE_PUBLIC_KEY
+ARG SUPABASE_SERVICE_ROLE_KEY
+ARG DISCORD_TOKEN
+ARG DISCORD_GUILD_ID
+ARG SENDGRID_API_KEY
 
 ENV ALGOLIA_TOKEN=$ALGOLIA_TOKEN
 ENV ALGOLIA_ID=$ALGOLIA_ID
 ENV GITHUB_API_TOKEN=$GITHUB_API_TOKEN
 ENV DEVTO_API_TOKEN=$DEVTO_API_TOKEN
 ENV GOOGLE_TAG_ID=$GOOGLE_TAG_ID
+ENV SUPABASE_URL=$SUPABASE_URL
+ENV SUPABASE_PUBLIC_KEY=$SUPABASE_PUBLIC_KEY
+ENV SUPABASE_SERVICE_ROLE_KEY=$SUPABASE_SERVICE_ROLE_KEY
+ENV DISCORD_TOKEN=$DISCORD_TOKEN
+ENV DISCORD_GUILD_ID=$DISCORD_GUILD_ID
+ENV SENDGRID_API_KEY=$SENDGRID_API_KEY
 ENV CI=true
 
 WORKDIR /app
@@ -28,12 +40,24 @@ ARG ALGOLIA_ID
 ARG GITHUB_API_TOKEN
 ARG DEVTO_API_TOKEN
 ARG GOOGLE_TAG_ID
+ARG SUPABASE_URL
+ARG SUPABASE_PUBLIC_KEY
+ARG SUPABASE_SERVICE_ROLE_KEY
+ARG DISCORD_TOKEN
+ARG DISCORD_GUILD_ID
+ARG SENDGRID_API_KEY
 
 ENV ALGOLIA_TOKEN=$ALGOLIA_TOKEN
 ENV ALGOLIA_ID=$ALGOLIA_ID
 ENV GITHUB_API_TOKEN=$GITHUB_API_TOKEN
 ENV DEVTO_API_TOKEN=$DEVTO_API_TOKEN
 ENV GOOGLE_TAG_ID=$GOOGLE_TAG_ID
+ENV SUPABASE_URL=$SUPABASE_URL
+ENV SUPABASE_PUBLIC_KEY=$SUPABASE_PUBLIC_KEY
+ENV SUPABASE_SERVICE_ROLE_KEY=$SUPABASE_SERVICE_ROLE_KEY
+ENV DISCORD_TOKEN=$DISCORD_TOKEN
+ENV DISCORD_GUILD_ID=$DISCORD_GUILD_ID
+ENV SENDGRID_API_KEY=$SENDGRID_API_KEY
 ENV NODE_ENV=production
 
 WORKDIR /app
