--- a/.vuestorefrontcloud/docker/Dockerfile
+++ b/.vuestorefrontcloud/docker/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:lts as builder
 
+ARG PAGE_URL
 ARG ALGOLIA_TOKEN
 ARG ALGOLIA_ID
 ARG GITHUB_API_TOKEN
@@ -12,6 +13,7 @@ ARG DISCORD_TOKEN
 ARG DISCORD_GUILD_ID
 ARG SENDGRID_API_KEY
 
+ENV PAGE_URL=$PAGE_URL
 ENV ALGOLIA_TOKEN=$ALGOLIA_TOKEN
 ENV ALGOLIA_ID=$ALGOLIA_ID
 ENV GITHUB_API_TOKEN=$GITHUB_API_TOKEN
@@ -35,6 +37,7 @@ RUN NODE_ENV=production npm run build
 
 FROM node:lts
 
+ARG PAGE_URL
 ARG ALGOLIA_TOKEN
 ARG ALGOLIA_ID
 ARG GITHUB_API_TOKEN
@@ -47,6 +50,7 @@ ARG DISCORD_TOKEN
 ARG DISCORD_GUILD_ID
 ARG SENDGRID_API_KEY
 
+ENV PAGE_URL=$PAGE_URL
 ENV ALGOLIA_TOKEN=$ALGOLIA_TOKEN
 ENV ALGOLIA_ID=$ALGOLIA_ID
 ENV GITHUB_API_TOKEN=$GITHUB_API_TOKEN
