--- a/.github/workflows/6.deploy-staging.yaml
+++ b/.github/workflows/6.deploy-staging.yaml
@@ -19,7 +19,7 @@ jobs:
       ENVIRONMENT: 'staging'
       SHA: '${{ github.sha }}'
     secrets:
-      PAGE_URL: '${{secrets.PAGE_URL}}'
+      PAGE_URL: 'https://developer-test.europe-west1.gcp.storefrontcloud.io'
       CLOUD_URL: 'https://developer-test.europe-west1.gcp.storefrontcloud.io'
       CLOUD_INSTANCE: 'https://farmer.storefrontcloud.io/instance/developer-test-europe-west1-gcp-storefrontcloud-io'
       CLOUD_USERNAME: '${{secrets.CLOUD_USERNAME}}'
