--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nuxt": "^3.0.0-rc.8",
     "ohmyfetch": "^0.4.18",
     "regexparam": "^2.0.1",
+    "svg-to-pdfkit": "^0.1.8",
     "transform-object-keys": "^1.0.7",
     "ufo": "^0.8.5",
     "vue-github-button": "^3.0.3",
@@ -65,7 +66,9 @@
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
     "@types/ejs": "^3.1.1",
+    "@types/pdfkit": "^0.12.6",
     "@types/prettier": "^2.6.4",
+    "@types/svg-to-pdfkit": "^0.1.0",
     "@unlighthouse/nuxt": "^0.3.29",
     "@vitest/ui": "^0.20.3",
     "@vue-storefront/eslint-config": "^1.0.17",
