chore: push development to main (#10)
* feat: add quizzes (#3)

* chore: update deps to fix build

* feat: first run of "Supabase deployment script"

* chore: allow SUpabase deployment to be triggered only manually

* feat: generate diploma PDF (#5)

* feat: update Quiz pages based on feedback (#6)

* chore: minor quiz updates based on feedback

* feat: show "Try again" page when user doesn't pass the quiz

* fix: "Take a test" button URL

* feat: show notification on errors

* chore: update "TryAgain" message in Quiz for clarity

* chore: sync `development` and `main` (#8)

* refactor: updated workflows

* refactor: fixed test CI

* refactor: updated deploy ci/cd

* refactor: updated deploy ci/cd

* docs: updated README

* refactor: fixed build step on CI/CD

* refactor: fixed deploy step on CI/CD

* refactor: fixed bot icon size

* refactor: updated CI/CD deployment process

* refactor: updated CI/CD

* refactor: changed deployment apps

* refactor: updated deploy script

* refactor: updated deploy envs

* refactor: updated deploy url

* refactor: return deploybot

* feat: auto deploy in Staging

* refactor: renamed stages

* refactor: fixed url envs

* refactor: added workflow control

* refactor: changed deploy process

* refactor: dyn var to separate job

* chore: debug action

* chore: debug action vars

* chore: debug action vars

* chore: debug action vars

* chore: debug action vars

* chore: debug action vars

* chore: debug action vars

* chore: debug action vars

* chore: debug action vars

* refactor: separated workflows production

* refactor: separated env stages deploy

* chore: enabled gTag

* feat: added missing page title

* refactor: fixed GitHubFooter

* refactor: fixed modal size

* refactor: added page title in video slug

* feat: added deploybot

* refactor: fixed deploybot config

* docs: added deploybot info on README

* refactor: fixed i

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
+PAGE_URL=
 GITHUB_API_TOKEN=
 DEVTO_API_TOKEN=
 ALGOLIA_TOKEN=
 ALGOLIA_ID=
 GOOGLE_TAG_ID=
+SUPABASE_URL=
+SUPABASE_PUBLIC_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+DISCORD_TOKEN=
+DISCORD_GUILD_ID=
+SENDGRID_API_KEY=
