--- a/.vuestorefrontcloud/docker/Dockerfile
+++ b/.vuestorefrontcloud/docker/Dockerfile
@@ -1,16 +1,30 @@
 FROM node:lts as builder
 
+ARG PAGE_URL
 ARG ALGOLIA_TOKEN
 ARG ALGOLIA_ID
 ARG GITHUB_API_TOKEN
 ARG DEVTO_API_TOKEN
 ARG GOOGLE_TAG_ID
+ARG SUPABASE_URL
+ARG SUPABASE_PUBLIC_KEY
+ARG SUPABASE_SERVICE_ROLE_KEY
+ARG DISCORD_TOKEN
+ARG DISCORD_GUILD_ID
+ARG SENDGRID_API_KEY
 
+ENV PAGE_URL=$PAGE_URL
 ENV ALGOLIA_TOKEN=$ALGOLIA_TOKEN
 ENV ALGOLIA_ID=$ALGOLIA_ID
 ENV GITHUB_API_TOKEN=$GITHUB_API_TOKEN
 ENV DEVTO_API_TOKEN=$DEVTO_API_TOKEN
 ENV GOOGLE_TAG_ID=$GOOGLE_TAG_ID
+ENV SUPABASE_URL=$SUPABASE_URL
+ENV SUPABASE_PUBLIC_KEY=$SUPABASE_PUBLIC_KEY
+ENV SUPABASE_SERVICE_ROLE_KEY=$SUPABASE_SERVICE_ROLE_KEY
+ENV DISCORD_TOKEN=$DISCORD_TOKEN
+ENV DISCORD_GUILD_ID=$DISCORD_GUILD_ID
+ENV SENDGRID_API_KEY=$SENDGRID_API_KEY
 ENV CI=true
 
 WORKDIR /app
@@ -23,17 +37,31 @@ RUN NODE_ENV=production npm run build
 
 FROM node:lts
 
+ARG PAGE_URL
 ARG ALGOLIA_TOKEN
 ARG ALGOLIA_ID
 ARG GITHUB_API_TOKEN
 ARG DEVTO_API_TOKEN
 ARG GOOGLE_TAG_ID
+ARG SUPABASE_URL
+ARG SUPABASE_PUBLIC_KEY
+ARG SUPABASE_SERVICE_ROLE_KEY
+ARG DISCORD_TOKEN
+ARG DISCORD_GUILD_ID
+ARG SENDGRID_API_KEY
 
+ENV PAGE_URL=$PAGE_URL
 ENV ALGOLIA_TOKEN=$ALGOLIA_TOKEN
 ENV ALGOLIA_ID=$ALGOLIA_ID
 ENV GITHUB_API_TOKEN=$GITHUB_API_TOKEN
 ENV DEVTO_API_TOKEN=$DEVTO_API_TOKEN
 ENV GOOGLE_TAG_ID=$GOOGLE_TAG_ID
+ENV SUPABASE_URL=$SUPABASE_URL
+ENV SUPABASE_PUBLIC_KEY=$SUPABASE_PUBLIC_KEY
+ENV SUPABASE_SERVICE_ROLE_KEY=$SUPABASE_SERVICE_ROLE_KEY
+ENV DISCORD_TOKEN=$DISCORD_TOKEN
+ENV DISCORD_GUILD_ID=$DISCORD_GUILD_ID
+ENV SENDGRID_API_KEY=$SENDGRID_API_KEY
 ENV NODE_ENV=production
 
 WORKDIR /app
