--- a/package.json
+++ b/package.json
@@ -35,22 +35,27 @@
   "dependencies": {
     "@headlessui/vue": "^1.6.7",
     "@iconify/vue": "^3.2.1",
+    "@kyvg/vue3-notification": "^2.4.1",
     "@nuxtjs/algolia": "^1.1.0",
-    "@pinia/nuxt": "^0.3.1",
+    "@pinia/nuxt": "^0.4.1",
     "@popperjs/core": "^2.11.5",
+    "@sendgrid/mail": "^7.7.0",
+    "@supabase/supabase-js": "^1.35.6",
     "@vueuse/nuxt": "^9.0.2",
     "clipboard": "^2.0.11",
-    "nuxt": "^3.0.0-rc.4",
+    "ejs": "^3.1.8",
+    "joi": "^17.6.0",
+    "nuxt": "^3.0.0-rc.8",
     "ohmyfetch": "^0.4.18",
-    "pinia": "^2.0.17",
     "regexparam": "^2.0.1",
+    "svg-to-pdfkit": "^0.1.8",
     "transform-object-keys": "^1.0.7",
     "ufo": "^0.8.5",
     "vue-github-button": "^3.0.3",
     "vue-i18n": "^9.2.0"
   },
   "devDependencies": {
-    "@histoire/plugin-nuxt": "^0.9.0",
+    "@histoire/plugin-nuxt": "^0.10.4",
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@intlify/nuxt3": "^0.2.3",
     "@nuxt/content": "^2.0.1",
@@ -61,7 +66,10 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
+    "@types/ejs": "^3.1.1",
+    "@types/pdfkit": "^0.12.6",
     "@types/prettier": "^2.6.4",
+    "@types/svg-to-pdfkit": "^0.1.0",
     "@unlighthouse/nuxt": "^0.3.29",
     "@vitest/ui": "^0.20.3",
     "@vue-storefront/eslint-config": "^1.0.17",
