--- a/package.json
+++ b/package.json
@@ -29,16 +29,15 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.2",
     "@iconify/vue": "^4.0.0",
-    "@nuxtjs/algolia": "^1.1.1",
+    "@kyvg/vue3-notification": "^2.4.1",
     "@pinia/nuxt": "^0.4.2",
     "@popperjs/core": "^2.11.6",
-    "@vueuse/nuxt": "^9.2.0",
-    "clipboard": "^2.0.11",
     "@sendgrid/mail": "^7.7.0",
-    "@supabase/supabase-js": "^1.35.6",
+    "@supabase/supabase-js": "^1.35.7",
+    "@vueuse/nuxt": "^9.3.0",
+    "clipboard": "^2.0.11",
     "ejs": "^3.1.8",
-    "@kyvg/vue3-notification": "^2.4.1",
-    "joi": "^17.6.0",
+    "joi": "^17.6.1",
     "ohmyfetch": "^0.4.19",
     "pinia": "^2.0.22",
     "regexparam": "^2.0.1",
@@ -50,38 +49,35 @@
   },
   "devDependencies": {
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
-    "@intlify/nuxt3": "^0.2.3",
-    "@nuxt/content": "^2.0.1",
-    "@nuxt/test-utils": "3.0.0-rc.4",
-    "@nuxtjs/partytown": "^1.2.1",
-    "@nuxtjs/tailwindcss": "^5.3.1",
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/line-clamp": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.4",
-    "@types/prettier": "^2.6.4",
+    "@intlify/nuxt3": "^0.2.4",
+    "@nuxt/content": "^2.1.1",
+    "@nuxt/test-utils": "3.0.0-rc.11",
+    "@nuxtjs/tailwindcss": "^5.3.3",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.7",
     "@types/ejs": "^3.1.1",
     "@types/pdfkit": "^0.12.6",
-    "@vitest/ui": "^0.20.3",
-    "@vue-storefront/eslint-config": "^1.0.17",
-    "@vue-storefront/nuxt-gtag": "^1.0.4",
+    "@types/prettier": "^2.7.1",
+    "@vitest/ui": "^0.23.4",
+    "@vue-storefront/eslint-config": "^1.1.1",
+    "@vue-storefront/nuxt-gtag": "^1.0.6",
     "@vue/test-utils": "^2.0.2",
-    "c8": "^7.12.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.21.0",
-    "histoire": "^0.9.0",
+    "eslint": "^8.24.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "nuxt-schema-org": "^0.6.5",
+    "nuxt": "^3.0.0-rc.11",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "sass": "^1.54.0",
+    "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss": "^3.1.7",
-    "typescript": "^4.7.4",
-    "vitest": "^0.20.3"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.3",
+    "vitest": "^0.23.4"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix"
