chore: updated nuxt to v3 stable

--- a/package.json
+++ b/package.json
@@ -30,56 +30,56 @@
     "@headlessui/vue": "^1.7.4",
     "@iconify/vue": "^4.0.0",
     "@kyvg/vue3-notification": "^2.6.1",
-    "@pinia/nuxt": "^0.4.3",
+    "@pinia/nuxt": "^0.4.4",
     "@popperjs/core": "^2.11.6",
     "@sendgrid/mail": "^7.7.0",
-    "@supabase/supabase-js": "^2.0.5",
-    "@vueuse/nuxt": "^9.4.0",
+    "@supabase/supabase-js": "^2.1.0",
+    "@vueuse/nuxt": "^9.5.0",
     "clipboard": "^2.0.11",
     "ejs": "^3.1.8",
     "joi": "^17.7.0",
     "nuxt-icon": "^0.1.7",
     "ohmyfetch": "^0.4.21",
-    "pinia": "^2.0.23",
+    "pinia": "^2.0.24",
     "regexparam": "^2.0.1",
     "svg-to-pdfkit": "^0.1.8",
     "transform-object-keys": "^1.0.7",
-    "ufo": "^0.8.6",
+    "ufo": "^1.0.0",
     "vue-github-button": "^3.1.0",
     "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@intlify/nuxt3": "^0.2.4",
-    "@nuxt/content": "^2.2.1",
-    "@nuxt/test-utils": "3.0.0-rc.13",
+    "@nuxt/content": "^2.2.2",
+    "@nuxt/test-utils": "3.0.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/ejs": "^3.1.1",
     "@types/pdfkit": "^0.12.8",
     "@types/prettier": "^2.7.1",
-    "@vitest/ui": "^0.25.0",
+    "@vitest/ui": "^0.25.2",
     "@vue-storefront/eslint-config": "^1.1.2",
     "@vue-storefront/eslint-config-typescript": "^1.1.2",
     "@vue-storefront/nuxt-gtag": "^1.0.6",
-    "@vue/test-utils": "^2.2.1",
+    "@vue/test-utils": "^2.2.3",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.27.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
-    "nuxt": "^3.0.0-rc.11",
+    "nuxt": "^3.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "sass": "^1.56.0",
-    "sass-loader": "^13.1.0",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss": "^3.2.2",
-    "typescript": "^4.8.4",
-    "vitest": "^0.25.0"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3",
+    "vitest": "^0.25.2"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix"
