--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
     "nuxt": "^3.0.0",
+    "postcss-custom-properties": "^13.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "sass": "^1.56.1",
