--- a/.github/workflows/7.deploy-development.yaml
+++ b/.github/workflows/7.deploy-development.yaml
@@ -14,7 +14,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   deploy:
-    if: github.ref == 'refs/heads/development'
+    if: github.ref == 'refs/heads/dev'
     uses: ./.github/workflows/base-deploy.yaml
     with:
       ENVIRONMENT: 'development'
