--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     }
   ],
   "engines": {
-    "node": ">=16"
+    "node": ">=16.19"
   },
   "scripts": {
     "build": "nuxi build",
@@ -89,5 +89,8 @@
     "hooks": {
       "prepare-commit-msg": "exec < /dev/tty && npx cz --hook || true"
     }
+  },
+  "volta": {
+    "node": "16.19.0"
   }
 }
