fix: moved collection of email in the beginning, add consent checkbox

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "developer.vuestorefront.io",
   "contributors": [
     {
-      "email": "heitor.ramon@gmail.com",
-      "name": "Heitor Ramon Ribeiro",
-      "url": "https://heitor.co"
+      "email": "skirianov@vuestorefront.io",
+      "name": "Sergii Kirianov",
+      "url": "https://twitter.com/SergiiKirianov"
     }
   ],
   "engines": {
